[gd_scene load_steps=2 format=3 uid="uid://cstyfc6cspfe1"]

[ext_resource type="Script" path="res://UI/Settings/settings.gd" id="1_e4aqd"]

[node name="Settings" type="Control" node_paths=PackedStringArray("sound_slider", "is_muted")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e4aqd")
sound_slider = NodePath("MarginContainer/VBoxContainer/sound_slider")
is_muted = NodePath("MarginContainer/VBoxContainer/CheckBox")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.596078)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -146.5
offset_right = 328.0
offset_bottom = 146.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sound"

[node name="sound_slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "	Mute"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.41276
anchor_top = 0.469136
anchor_right = 0.58724
anchor_bottom = 0.530864
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="MarginContainer2"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/sound_slider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="MarginContainer2/Back" to="." method="_on_back_pressed"]
